# aws-resource-controller

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  e2e.yml  security.yml
.playwright-mcp/: page-2026-05-25T04-13-31-938Z.yml  page-2026-05-25T04-14-31-914Z.yml  page-2026-05-25T04-14-43-962Z.yml  page-2026-05-25T04-15-02-388Z.yml
docs/: ANALYSIS.md  DECISIONS.md  DESIGN.md  INDEX.md  PROGRESS.md  ROADMAP.md  TEARDOWN.md  VERIFICATION.md
docs/sessions/: 2026-05-25.md
inventory/: INVENTORY.md
lambda/api/: build.sh  pyproject.toml  requirements-dev.txt  requirements.txt
lambda/api/src/: handler.py
lambda/api/tests/: conftest.py  test_handler.py
lambda/budget_killswitch/: build.sh
lambda/budget_killswitch/src/: handler.py
lambda/ingest/: .gitignore  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt
lambda/ingest/src/: handler.py
lambda/ingest/tests/: conftest.py  test_handler.py
scripts/: lint_docs.py
terraform/: .gitignore  README.md
terraform/bootstrap/: README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/envs/dev/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  (+1 more)
tests/e2e/: conftest.py  e2e_api_full_loop.py  e2e_ses_to_inbox.py  requirements.txt  smoke_ingest.py  test_browser_full_journey.py
web/: deploy.sh  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
web/tests/: App.test.tsx
(+28 files in other folders)
