[project]
name = "tempses-api"
version = "0.1.0"
description = "TempSES Lambda API — HTTP routes for address creation and message access"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
ignore_missing_imports = true
